Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.9
-
None
-
74fee84ac (dev), 8fb3df8c0 (6.8), 46f34005c (6.7), c3e183db9 (tqtc/lts-6.5)
Description
- play to end
- play again
expected behaviour: playback takes expected time
current behaviour: playback finishes "quickly"
reproducer in https://codereview.qt-project.org/c/qt/qtmultimedia/+/577582
(manual test in minimal-player seems to work fine)
Attachments
Issue Links
- relates to
-
QTBUG-126799 [gstreamer] playback rate / seeking unreliable
-
- Closed
-
For Gerrit Dashboard: QTBUG-127346 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
577582,5 | Tests: test subsequent playback | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
577866,2 | Tests: test subsequent playback | 6.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
577871,3 | Tests: test subsequent playback | 6.7 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
577956,3 | Tests: test subsequent playback | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |