Tests: test subsequent playback

Task-number: QTBUG-127346
Pick-to: 6.5 6.7 6.8
Change-Id: Iacb3589cdd7eb763539f94422a3fd050c1796d2d
Reviewed-by: Tim Blechmann <tim.blechmann@qt.io>